// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildImports imports when typescript 1`] = `
"import qawolf from \\"qawolf\\";
const selectors = require(\\"./selectors/myScript.json\\");"
`;

exports[`buildImports imports when typescript 2`] = `
"import { devices } from \\"playwright\\";
import qawolf from \\"qawolf\\";
const selectors = require(\\"./selectors/myScript.json\\");
const device = devices[\\"iPhone 11\\"];"
`;

exports[`buildImports includes device when specified 1`] = `
"const { devices } = require(\\"playwright\\");
const qawolf = require(\\"qawolf\\");
const selectors = require(\\"./selectors/myScript.json\\");
const device = devices[\\"iPhone 11\\"];"
`;

exports[`buildImports requires when not typescript 1`] = `
"const qawolf = require(\\"qawolf\\");
const selectors = require(\\"./selectors/myScript.json\\");"
`;

exports[`buildTemplate builds script template 1`] = `
"const qawolf = require(\\"qawolf\\");
const selectors = require(\\"./selectors/myScript.json\\");

const myScript = async context => {
  let page = await context.newPage();
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
};

exports.myScript = myScript;

if (require.main === module) {
  (async () => {
    const browser = await qawolf.launch();
    const context = await browser.newContext();
    await qawolf.register(context);
    await myScript(context);
    await qawolf.stopVideos();
    await browser.close();
  })();
}"
`;

exports[`buildTemplate builds test template 1`] = `
"const qawolf = require(\\"qawolf\\");
const selectors = require(\\"./selectors/myTest.json\\");

let browser;
let page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext();
  await qawolf.register(context);
  page = await context.newPage();
});

afterAll(async () => {
  await qawolf.stopVideos();
  await browser.close();
});

test('myTest', async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
});"
`;

exports[`buildTemplate corrects invalid script names if posssible 1`] = `
"const qawolf = require(\\"qawolf\\");
const selectors = require(\\"./selectors/my-script.json\\");

const myScript = async context => {
  let page = await context.newPage();
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
};

exports.myScript = myScript;

if (require.main === module) {
  (async () => {
    const browser = await qawolf.launch();
    const context = await browser.newContext();
    await qawolf.register(context);
    await myScript(context);
    await qawolf.stopVideos();
    await browser.close();
  })();
}"
`;

exports[`buildTemplate sets state if statePath specified 1`] = `
"const qawolf = require(\\"qawolf\\");
const selectors = require(\\"./selectors/myScript.json\\");

const myScript = async context => {
  let page = await context.newPage();
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.setState(page, \\"admin.json\\");
  await qawolf.create();
};

exports.myScript = myScript;

if (require.main === module) {
  (async () => {
    const browser = await qawolf.launch();
    const context = await browser.newContext();
    await qawolf.register(context);
    await myScript(context);
    await qawolf.stopVideos();
    await browser.close();
  })();
}"
`;

exports[`buildTemplate sets state if statePath specified 2`] = `
"const qawolf = require(\\"qawolf\\");
const selectors = require(\\"./selectors/myTest.json\\");

let browser;
let page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext();
  await qawolf.register(context);
  page = await context.newPage();
});

afterAll(async () => {
  await qawolf.stopVideos();
  await browser.close();
});

test('myTest', async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.setState(page, \\"admin.json\\");
  await qawolf.create();
});"
`;
